# lstar-lm

./: pyproject.toml
experiment/: experiment.py  requirements.txt
src/lstar_llm/: oracle.py
src/lstar_lm/: llm.py  lstar_lm.py  oracle.py
tests/: test_api.py  tomita_lstar.py
